--- a/form/usuario/css/index.css
+++ b/form/usuario/css/index.css
@@ -8,9 +8,9 @@
 #gravatar_user{
 	width: 15%;
     position: relative;
-    bottom: 80px;
+    bottom: 100px;
     left: 40px;
-    float: left;
+    margin-bottom: -100px;
 }
 
 #post_box_user{
@@ -21,15 +21,75 @@
     background-color: rgb(238,238,238); 
 }
 
-#username{
+#user_status{
 	width: 100%;
-    margin-left: 45px;
 	font-weight: bold;
+    float: left;
 }
 
-#msg_box_user{
-	margin-top: 40px;
+#gravatar_user_post{
+    float: left;
+    width: 10%;
 }
+
+#user_post{
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(255,255,255,1) 0%, rgba(243,243,243,1) 100%, rgba(243,243,243,1) 100%, rgba(237,237,237,1) 100%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(243,243,243,1)), color-stop(100%,rgba(243,243,243,1)), color-stop(100%,rgba(237,237,237,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    float: left;
+    width: 100%;
+    padding: 10px;
+}
+
+#user_post_time{
+	float: left;
+    width: 100%;
+    font-weight: lighter;
+    margin-left: 5px;
+    margin-bottom: 12px;
+}
+
+#user_top_box{
+	float: left;
+    width: 90%;
+}
+
+#user_post_title{
+	float: left;
+    font-weight: bold;
+    width: 100%;
+    margin-left: 5px;
+}
+
+#user_post_content{
+	width: 100%;
+    float: left;
+    padding: 10px;
+    background-color: white;
+    font-style: italic;
+    text-align: justify;
+    border-radius: 2%;
+}
+
+#user_post_links{
+    width: 100%;
+    float:left;
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(255,255,255,1) 0%, rgba(243,243,243,1) 100%, rgba(243,243,243,1) 100%, rgba(237,237,237,1) 100%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(243,243,243,1)), color-stop(100%,rgba(243,243,243,1)), color-stop(100%,rgba(237,237,237,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%,rgba(243,243,243,1) 100%,rgba(237,237,237,1) 100%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+}
+
 .red{
 	background-color: red;
 }
